<resources>
    <string name="app_name">BadiBuddy</string>

    <string name="title_water">Water</string>
    <string name="title_weather">Weather</string>
    <string name="title_sun">Sun (TBA)</string>
    <string name="title_pool">Pools (TBA)</string>
    <string name="title_settings">Settings</string>

    <string name="title_location">Locations</string>

    <string name="title_morning">Morning</string>
    <string name="title_afternoon">Afternoon</string>
    <string name="title_evening">Evening</string>

    <string name="text_location_details">Location View</string>

    <string name="text_last_updated">Showing data from</string>
    <string name="text_water_in_two_hours">Temperature in 2h</string>
    <string name="text_water_amount">Water flow rate (m³/s)</string>
    <string name="text_air_temperature">Air temperature (°)</string>

    <string name="text_degrees">%.1f°</string>

    <string name="text_no_internet">No internet connection available.</string>
    <string name="text_try_again">Try again</string>
    <string name="text_continue_anyway">Continue anyway</string>
    <string name="text_api_exception">An error occured while getting data from %1s: %2s</string>
    <string name="title_error">Error</string>
    <string name="text_json_exception">An error occured while parsing %1s: %2s</string>
    <string name="text_water_temperature">Water</string>
    <string name="air_temperature">Air</string>

    <string name="text_getting_data">Getting data from server…</string>
</resources>